--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+3
+version: 1.0.5+3
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -45,6 +45,8 @@ dependencies:
   torch_light: ^0.4.0
   flutter_local_notifications: ^12.0.2
   fullscreen: ^1.0.3
+  flutter_chat_ui: ^1.6.5
+  socket_io_client: ^2.0.0
 
 dev_dependencies:
   flutter_test:
