--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   fullscreen: ^1.0.3
   flutter_chat_ui: ^1.6.5
   socket_io_client: ^2.0.0
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
