--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_chat_ui: ^1.6.5
   socket_io_client: ^2.0.0
   provider: ^6.0.4
+  just_audio: ^0.9.30
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
