--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^6.0.4
   audioplayers: ^0.20.1
   nil: ^1.1.1
+  vibration: ^1.7.6
 
 dev_dependencies:
   flutter_test:
