--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.6+13
+version: 1.2.0+17
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -42,14 +42,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   torch_light: ^0.4.0
   flutter_local_notifications: ^12.0.2
   fullscreen: ^1.0.3
   socket_io_client: ^2.0.0
   provider: ^6.0.4
   audioplayers: ^0.20.1
-  nil: ^1.1.1
   vibration: ^1.7.6
+  volume_control: ^0.1.5
 
 dev_dependencies:
   flutter_test:
