--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.0+17
+version: 1.2.3+20
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -51,6 +51,8 @@ dependencies:
   audioplayers: ^0.20.1
   vibration: ^1.7.6
   volume_control: ^0.1.5
+  battery_plus: ^3.0.2
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
